--- a/notes.ipynb
+++ b/notes.ipynb
@@ -649,6 +649,20 @@
     "//after:\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "some modules are removed from react router dom. Switch and Redirect.\n",
+    "switch is replaced by Routes, and Redirect is replaced by Navigate."
+   ]
   }
  ],
  "metadata": {
